# async-codec-lite

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: main.yaml
async_codec_lite/: all.html  enum.LimitError.html  index.html  sidebar-items.js  struct.Bytes.html  struct.BytesCodec.html  struct.BytesMut.html  struct.CborCodec.html  struct.Framed.html  struct.FramedParts.html  struct.FramedRead.html  struct.FramedWrite.html  struct.JsonCodec.html  struct.LengthCodec.html  struct.LimitCodec.html  struct.LinesCodec.html  struct.OverflowError.html  trait.Decoder.html  trait.DecoderWithSkipAhead.html  trait.Encoder.html  trait.SkipAheadHandler.html
async_codec_lite/codec/: trait.Decoder.html  trait.Encoder.html
async_codec_lite/codec/bytes/: struct.BytesCodec.html
async_codec_lite/codec/cbor/: struct.CborCodec.html
async_codec_lite/codec/json/: struct.JsonCodec.html
async_codec_lite/codec/length/: struct.LengthCodec.html  struct.OverflowError.html
async_codec_lite/codec/limit/: enum.LimitError.html  struct.LimitCodec.html  (+2 more)
async_codec_lite/framed/: struct.Bytes.html  struct.BytesMut.html  struct.Framed.html  struct.FramedParts.html
implementors/async_codec_lite/: trait.SkipAheadHandler.js
implementors/futures_sink/: trait.Sink.js
src/: error.rs  lib.rs
src/async_codec_lite/: error.rs.html  lib.rs.html
src/codec/: bytes.rs  cbor.rs  json.rs  length.rs  limit.rs  lines.rs  mod.rs
src/framed/: inner.rs  mod.rs  read.rs  write.rs
tests/all/: main.rs
tests/all/codec/: mod.rs  (+3 more)
(+33 files in other folders)
