[package]
name = "async-codec-lite"
edition = "2018"
version = "0.0.0"
authors = ["<silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception AND MIT"
description = """
Adaptors from AsyncRead/AsyncWrite to Stream/Sink using futures.
"""

[package.metadata.docs.rs]
all-features = true

[features]
default = []
cbor = ["serde", "serde_cbor"]
json = ["serde", "serde_json"]
lines = ["memchr"]

[dependencies]
anyhow = "1.0"
bytes = "1.0"
futures-core = "0.3"
futures-io = "0.3"
futures-sink = "0.3"
log = "0.4"
pin-project-lite = "0.2"
thiserror = "1.0"

[dependencies.memchr]
version = "2.3"
optional = true

[dependencies.serde]
version = "1.0"
optional = true
features = [ "derive" ]

[dependencies.serde_cbor]
version = "0.11"
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[dev-dependencies]
futures-lite = "1.11"

[dev-dependencies.futures-util]
version = "0.3"
features = ["io", "sink"]
